# clip-ggml

./: .gitmodules  .metadata  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: build.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/clip_ggml_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: clip_ggml.podspec
ios/Classes/: clip_ggml.c
lib/: clip_ggml.dart  clip_ggml_bindings_generated.dart
src/: CMakeLists.txt  cli.cpp  clip_ggml.c  clip_ggml.cpp  clip_ggml.h
